--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get: ^4.6.6
   shared_preferences: ^2.2.3
   flutter_local_notifications: ^17.1.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
