--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.2.3
   flutter_local_notifications: ^17.1.2
   intl: ^0.19.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
